ADD: Responsive Fixes
Responsive fixes added for pages

--- a/src/styles/pages/_analysis.scss
+++ b/src/styles/pages/_analysis.scss
@@ -91,3 +91,31 @@
   }
 
 }
+
+@media only screen and (max-width: $x-small) {
+  .page-analysis-content {
+    margin-top: 50px;
+
+    .analysis-news-container {
+      .analysis-card {
+        width:100%;
+      }
+    }
+
+  }
+
+}
+
+@media only screen and (max-width: $x-small) {
+  .page-analysis-content {
+    margin-top: 50px;
+
+    .analysis-news-container {
+      .analysis-card {
+        width:100%;
+      }
+    }
+
+  }
+
+}
