--- a/src/styles/pages/_announcements.scss
+++ b/src/styles/pages/_announcements.scss
@@ -77,3 +77,143 @@
   }
 
 }
+
+
+@media only screen and (max-width: $x-small) {
+  .page-announcements-section {
+    margin-top: 50px;
+
+    .announcement-card {
+      .timeline {
+        width: 32%;
+        padding:0 5px;
+        .dot, .date {
+          margin-left: 0;
+          margin-right: 15px;
+          width: 100%;
+          text-align: center;
+        }
+
+        .dot {
+          &:before {
+            display: none;
+          }
+        }
+      }
+    }
+
+  }
+
+}
+
+
+@media only screen and (max-width: $x-small) {
+  .page-announcements-section {
+    margin-top: 50px;
+
+    .announcement-card {
+      .timeline {
+        width: 32%;
+        padding:0 5px;
+        .dot, .date {
+          margin-left: 0;
+          margin-right: 15px;
+          width: 100%;
+          text-align: center;
+        }
+
+        .dot {
+          &:before {
+            display: none;
+          }
+        }
+      }
+    }
+
+  }
+
+}
+
+
+@media only screen and (max-width: $x-small) {
+  .page-announcements-section {
+    margin-top: 50px;
+
+    .announcement-card {
+      .timeline {
+        width: 32%;
+        padding:0 5px;
+        .dot, .date {
+          margin-left: 0;
+          margin-right: 15px;
+          width: 100%;
+          text-align: center;
+        }
+
+        .dot {
+          &:before {
+            display: none;
+          }
+        }
+      }
+    }
+
+  }
+
+}
+
+
+@media only screen and (max-width: $x-small) {
+  .page-announcements-section {
+    margin-top: 50px;
+
+    .announcement-card {
+      .timeline {
+        width: 32%;
+        padding:0 5px;
+        .dot, .date {
+          margin-left: 0;
+          margin-right: 15px;
+          width: 100%;
+          text-align: center;
+        }
+
+        .dot {
+          &:before {
+            display: none;
+          }
+        }
+      }
+    }
+
+  }
+
+}
+
+
+@media only screen and (max-width: $x-small) {
+  .page-announcements-section {
+    margin-top: 50px;
+
+    .announcement-card {
+      .timeline {
+        width: 32%;
+        padding:0 5px;
+        .dot, .date {
+          margin-left: 0;
+          margin-right: 15px;
+          width: 100%;
+          text-align: center;
+        }
+
+        .dot {
+          &:before {
+            display: none;
+          }
+        }
+      }
+    }
+
+  }
+
+}
