--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -105,3 +105,78 @@
 
 }
 
+@media only screen and (max-width: $x-small) {
+  .page-contact-content{
+    margin-top: 50px;
+
+    .login-form {
+      display: block;
+      .side-left, .side-right { width:100%; margin:0; }
+      .side-right {
+        padding: 50px 40px;
+      }
+    }
+
+  }
+
+}
+@media only screen and (max-width: $x-small) {
+  .page-contact-content{
+    margin-top: 50px;
+
+    .login-form {
+      display: block;
+      .side-left, .side-right { width:100%; margin:0; }
+      .side-right {
+        padding: 50px 40px;
+      }
+    }
+
+  }
+
+}
+@media only screen and (max-width: $x-small) {
+  .page-contact-content{
+    margin-top: 50px;
+
+    .login-form {
+      display: block;
+      .side-left, .side-right { width:100%; margin:0; }
+      .side-right {
+        padding: 50px 40px;
+      }
+    }
+
+  }
+
+}
+@media only screen and (max-width: $x-small) {
+  .page-contact-content{
+    margin-top: 50px;
+
+    .login-form {
+      display: block;
+      .side-left, .side-right { width:100%; margin:0; }
+      .side-right {
+        padding: 50px 40px;
+      }
+    }
+
+  }
+
+}
+@media only screen and (max-width: $x-small) {
+  .page-contact-content{
+    margin-top: 50px;
+
+    .login-form {
+      display: block;
+      .side-left, .side-right { width:100%; margin:0; }
+      .side-right {
+        padding: 50px 40px;
+      }
+    }
+
+  }
+
+}
