--- a/src/styles/pages/about-us.scss
+++ b/src/styles/pages/about-us.scss
@@ -15,3 +15,128 @@
   }
 
 }
+
+@media only screen and (max-width: $x-small) {
+  .content-slider.slider-small {
+    margin: 380px 0 20px;
+    .slider-image {
+      background-size: contain !important;
+      width: 395px;
+      height: 225px;
+      top: -320px;
+      right: -70px;
+    }
+  }
+
+  .page-about-our-achievements {
+    margin-top: 50px;
+    .award-box {
+      img {
+        &:first-child, &:last-child {
+          margin-top: 30px;
+        }
+      }
+    }
+  }
+
+}
+
+@media only screen and (max-width: $x-small) {
+  .content-slider.slider-small {
+    margin: 380px 0 20px;
+    .slider-image {
+      background-size: contain !important;
+      width: 395px;
+      height: 225px;
+      top: -320px;
+      right: -70px;
+    }
+  }
+
+  .page-about-our-achievements {
+    margin-top: 50px;
+    .award-box {
+      img {
+        &:first-child, &:last-child {
+          margin-top: 30px;
+        }
+      }
+    }
+  }
+
+}
+
+@media only screen and (max-width: $x-small) {
+  .content-slider.slider-small {
+    margin: 380px 0 20px;
+    .slider-image {
+      background-size: contain !important;
+      width: 395px;
+      height: 225px;
+      top: -320px;
+      right: -70px;
+    }
+  }
+
+  .page-about-our-achievements {
+    margin-top: 50px;
+    .award-box {
+      img {
+        &:first-child, &:last-child {
+          margin-top: 30px;
+        }
+      }
+    }
+  }
+
+}
+
+@media only screen and (max-width: $x-small) {
+  .content-slider.slider-small {
+    margin: 380px 0 20px;
+    .slider-image {
+      background-size: contain !important;
+      width: 395px;
+      height: 225px;
+      top: -320px;
+      right: -70px;
+    }
+  }
+
+  .page-about-our-achievements {
+    margin-top: 50px;
+    .award-box {
+      img {
+        &:first-child, &:last-child {
+          margin-top: 30px;
+        }
+      }
+    }
+  }
+
+}
+
+@media only screen and (max-width: $x-small) {
+  .content-slider.slider-small {
+    margin: 380px 0 20px;
+    .slider-image {
+      background-size: contain !important;
+      width: 395px;
+      height: 225px;
+      top: -320px;
+      right: -70px;
+    }
+  }
+
+  .page-about-our-achievements {
+    margin-top: 50px;
+    .award-box {
+      img {
+        &:first-child, &:last-child {
+          margin-top: 30px;
+        }
+      }
+    }
+  }
+
+}
