--- a/src/styles/pages/investment-tools.scss
+++ b/src/styles/pages/investment-tools.scss
@@ -39,3 +39,38 @@
   }
 
 }
+
+@media only screen and (max-width: $x-small) {
+  .page-live-currency {
+    margin-top: 50px;
+  }
+
+}
+
+@media only screen and (max-width: $x-small) {
+  .page-live-currency {
+    margin-top: 50px;
+  }
+
+}
+
+@media only screen and (max-width: $x-small) {
+  .page-live-currency {
+    margin-top: 50px;
+  }
+
+}
+
+@media only screen and (max-width: $x-small) {
+  .page-live-currency {
+    margin-top: 50px;
+  }
+
+}
+
+@media only screen and (max-width: $x-small) {
+  .page-live-currency {
+    margin-top: 50px;
+  }
+
+}
