--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -98,3 +98,63 @@
   }
 
 }
+
+@media only screen and (max-width: $x-small) {
+  .login-register-block {
+    margin-top: -200px  ;
+    display: block;
+    .entry-block, .form-block {
+      width: 100%;
+    }
+
+  }
+
+}
+
+@media only screen and (max-width: $x-small) {
+  .login-register-block {
+    margin-top: -200px  ;
+    display: block;
+    .entry-block, .form-block {
+      width: 100%;
+    }
+
+  }
+
+}
+
+@media only screen and (max-width: $x-small) {
+  .login-register-block {
+    margin-top: -200px  ;
+    display: block;
+    .entry-block, .form-block {
+      width: 100%;
+    }
+
+  }
+
+}
+
+@media only screen and (max-width: $x-small) {
+  .login-register-block {
+    margin-top: -200px  ;
+    display: block;
+    .entry-block, .form-block {
+      width: 100%;
+    }
+
+  }
+
+}
+
+@media only screen and (max-width: $x-small) {
+  .login-register-block {
+    margin-top: -200px  ;
+    display: block;
+    .entry-block, .form-block {
+      width: 100%;
+    }
+
+  }
+
+}
