FIX: Slider Image Fix
Small version of slider image added to each page

--- a/src/about-us.twig
+++ b/src/about-us.twig
@@ -4,7 +4,7 @@
 
     {% set showPhone = false %}
 
-    <section class="content-slider">
+    <section class="content-slider slider-small">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </div>
-        <div class="slider-image" style="background:url('./images/banner_image_1.png') no-repeat;"></div>
+        <div class="slider-image" style="background:url('./images/about_banner.png') no-repeat;"></div>
     </section>
 
     <section class="page-about-our-achievements">
