--- a/src/register.twig
+++ b/src/register.twig
@@ -4,8 +4,8 @@
 
     {% set showPhone = false %}
 
-    <section class="content-slider">
-        <div class="slider-image" style="background:url('./images/banner_image_1.png') no-repeat;"></div>
+    <section class="content-slider slider-small">
+        <div class="slider-image" style="background:url('./images/register_banner.png') no-repeat;"></div>
     </section>
 
     <section class="page-login-register">
