--- a/src/index.twig
+++ b/src/index.twig
@@ -233,7 +233,7 @@
         </div>
 
         <div class="row news-container">
-            <div class="col-lg-6 col-sm-6 col-xs-12">
+            <div class="col-lg-6 col-sm-6 col-xs-12 order-1">
                 <div class="news-card news-featured">
                     <h3 class="news-title">Uzmanlar TCMB'nin Faiz Kararını Nasıl Karşıladı?</h3>
                     <p class="news-body">
@@ -246,7 +246,7 @@
 
                 </div>
             </div>
-            <div class="col-lg-6 col-sm-6 col-xs-12">
+            <div class="col-lg-6 col-sm-6 col-xs-12 order-12">
                 <img src="images/News_image.png" class="img-fluid" />
             </div>
         </div>
@@ -254,7 +254,7 @@
         <hr />
 
         <div class="row">
-            <div class="col">
+            <div class="col-lg-6 col-col-sm-6 col-xs-12">
                 <div class="news-card">
                     <h3 class="news-title">Lorem ipsum sit amet</h3>
                     <div class="body">
@@ -270,7 +270,7 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col-lg-6 col-col-sm-6 col-xs-12">
                 <div class="news-card">
                     <h3 class="news-title">Lorem ipsum sit amet</h3>
                     <div class="body">
@@ -288,7 +288,7 @@
         </div>
 
         <div class="row">
-            <div class="col">
+            <div class="col-lg-6 col-col-sm-6 col-xs-12">
                 <div class="news-card">
                     <h3 class="news-title">Lorem ipsum sit amet</h3>
                     <div class="body">
@@ -304,7 +304,7 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col-lg-6 col-col-sm-6 col-xs-12">
                 <div class="news-card">
                     <h3 class="news-title">Lorem ipsum sit amet</h3>
                     <div class="body">
