--- a/src/platforms.twig
+++ b/src/platforms.twig
@@ -3,9 +3,8 @@
 {% block page_content %}
 
     {% set showPhone = false %}
-    {% set pageTitle = 'Heloooooooo' %}
 
-    <section class="content-slider">
+    <section class="content-slider slider-small">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -24,7 +23,7 @@
                 </div>
             </div>
         </div>
-        <div class="slider-image" style="background:url('./images/banner_image_1.png') no-repeat;"></div>
+        <div class="slider-image" style="background:url('./images/platform_banner.png') no-repeat;"></div>
     </section>
 
     <section class="page-platforms-block">
@@ -68,7 +67,7 @@
                             </p>
 
                             <p>
-                                Bu bölümde, KaleFx müşterileri MetaTrader 4 işlem platformunu ve mobil uygulamalarını PDA, iPhone®, iPad ™ ve Android için indirebilirler.
+                                Bu bölümde, KaleFx müşterileri metatrader 4 işlem platformunu ve mobil uygulamalarını PDA, iPhone®, iPad ™ ve Android için indirebilirler.
                             </p>
 
                             <div class="buttons">
