ADD: Card Carousel Logic Added
Card carousel logic is added

--- a/src/index.twig
+++ b/src/index.twig
@@ -129,7 +129,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row js-card-carousel">
             <div class="col-lg-3">
                 <div class="content-card">
                     <div class="header">
@@ -186,7 +186,10 @@
                     </div>
                 </div>
             </div>
+
         </div>
+
+        <div class="dots"></div>
 
     </div>
 </section>
