--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -79,16 +79,17 @@ header.header-sticky {
 .mobile-menu {
   display: none;
   position: fixed;
-  background: rgba(255, 255, 255, .9);
+  background: #fff;
   width: 100%;
   height:100%;
   z-index: 1;
   padding:20px;
 
   nav  {
+    font-family: $base-font-family;
     margin-top: 60px;
     a {
-      display: block;
+     display: block;
       text-align: left;
       margin:20px;
       color:#000;
@@ -96,7 +97,7 @@ header.header-sticky {
   }
 
   .menu-close {
-
+    box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, 0.1);
     position: absolute;
     top: 20px;
     right: 20px;
@@ -110,8 +111,8 @@ header.header-sticky {
     color:$primary;
   }
 
-  a.btn-outline-primary { color:$primary; width: 40%; }
-  a.btn-primary { color:#fff; width: 40%; }
+  a.btn-outline-primary { color:$primary; width: 27%; }
+  a.btn-primary { color:#fff; width: 27%; }
 
 }
 
