ADD: Hide Phone Class
Hide phone class added due to hide phone image in different views

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -117,6 +117,12 @@ footer {
     }
   }
 
+  .bar.hide-phone {
+    .carsifx-mobile-img {
+      display: none;
+    }
+  }
+
   .footer-bottom {
     position: relative;
     z-index: 1;
