ADD: Hide Phone Class
Hide phone class added to .bar class

--- a/src/layouts/footer.twig
+++ b/src/layouts/footer.twig
@@ -1,6 +1,6 @@
 <footer>
 
-    <div class="bar">
+    <div class="bar hide-phone">
         {% if showPhone == true  %}
         <div class="container">
             <img src="images/Phone.png" class="img-fluid carsifx-mobile-img" />
