FIX: Bottom Margin Fix
Unnecessary margin bottom were removed

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -262,9 +262,9 @@
   .content-slider.slider-small {
     .slider-image {
       top: -245px;
-      right: -390px;
+      right: -40px;
+      width:860px;
     }
-    margin-bottom: 300px;
   }
 
 }
@@ -275,6 +275,7 @@
     .slider-image {
       top: -85%;
       right: -13%;
+      width:860px;
     }
   }
 
@@ -283,7 +284,6 @@
       top: -245px;
       right: -490px;
     }
-    margin-bottom: 300px;
   }
 
 }
@@ -294,6 +294,7 @@
     .slider-image {
       top: -220px;
       right: -35%;
+      width:860px;
     }
   }
 
@@ -302,7 +303,6 @@
       top: -245px;
       right: -490px;
     }
-    margin-bottom: 300px;
   }
 
 }
