ADD: Account Actions Page Styles Imported
Account Actions page styles are added to import list

--- a/src/styles/pages/_pages.scss
+++ b/src/styles/pages/_pages.scss
@@ -4,6 +4,7 @@
 @import "./analysis";
 @import "./about-us";
 @import "./account-types";
+@import "./account-actions";
 @import "./contact";
 @import "./login";
 @import "./announcements";
