ADD: Navigation Links Added
Navigation links added to navigate through each page/section.

--- a/src/layouts/footer.twig
+++ b/src/layouts/footer.twig
@@ -1,6 +1,6 @@
 <footer>
 
-    <div class="bar hide-phone">
+    <div class="bar">
         {% if showPhone == true  %}
         <div class="container">
             <img src="images/Phone.png" class="img-fluid carsifx-mobile-img" />
@@ -26,7 +26,7 @@
 
                              <ul class="links list-unstyled">
                                  <li>
-                                     <a href="#">Hakkımızda</a>
+                                     <a href="about-us.html">Hakkımızda</a>
                                  </li>
                              </ul>
                          </div>
@@ -37,24 +37,21 @@
 
                              <ul class="links list-unstyled">
                                  <li>
-                                     <a href="#">MetaTrader 4</a>
-                                 </li>
-                                 <li>
-                                     <a href="#">MetaTrader 5</a>
+                                     <a href="./platforms.html">Platformlar</a>
                                  </li>
                              </ul>
                          </div>
 
                          <div class="footer-block link-block">
-                             <h4 class="block-title">Piyasalar</h4>
+                             <h4 class="block-title">Yatırım Araçları</h4>
                              <span class="separator"></span>
 
                              <ul class="links list-unstyled">
-                                 <li><a href="#">Para Birimleri</a></li>
-                                 <li><a href="#">Metaller</a></li>
-                                 <li><a href="#">Borsa Endeksleri</a></li>
-                                 <li><a href="#">Kıymetli Madenler</a></li>
-                                 <li><a href="#">Kripto Paralar</a></li>
+                                 <li><a href="invest-tools-currencies.html">Para Birimleri</a></li>
+                                 <li><a href="invest-tools-metals.html">Metaller</a></li>
+                                 <li><a href="invest-tools-emtia.html">Emtia</a></li>
+                                 <li><a href="invest-tools-exchanges.html">Borsa Endeksleri</a></li>
+                                 <li><a href="invest-tools-crypto-currencies.html">Kripto Paralar</a></li>
                              </ul>
                          </div>
 
@@ -63,21 +60,20 @@
                              <span class="separator"></span>
 
                              <ul class="links list-unstyled">
-                                 <li><a href="#">Demo Hesap Açın!</a></li>
-                                 <li><a href="#">Gerçek Hesap Açın!</a></li>
-                                 <li><a href="#">Hesabınızı Taşıyın</a></li>
-                                 <li><a href="#">Hesap Türleri</a></li>
+                                 <li><a href="open-demo-account.html">Demo Hesap Açın!</a></li>
+                                 <li><a href="open-real-account.html">Gerçek Hesap Açın!</a></li>
+                                 <li><a href="move-account.html">Hesabınızı Taşıyın</a></li>
+                                 <li><a href="account-types.html">Hesap Türleri</a></li>
                              </ul>
                          </div>
 
                          <div class="footer-block link-block">
-                             <h4 class="block-title">Tablolar</h4>
+                             <h4 class="block-title">Bilgi Bankası</h4>
                              <span class="separator"></span>
 
                              <ul class="links list-unstyled">
-                                 <li><a href="#">Fiyat Akışı</a></li>
-                                 <li><a href="#">Ürün Özellikleri</a></li>
-                                 <li><a href="#">İşlem Saatleri</a></li>
+                                 <li><a href="what-is-forex.html">Forex Nedir</a></li>
+                                 <li><a href="faq.html">Sıkça Sorulanlar</a></li>
                              </ul>
                          </div>
 
