ADD: Link Update & Login Popup
- Links are added
- Login popup is added

--- a/src/layouts/header.twig
+++ b/src/layouts/header.twig
@@ -15,21 +15,59 @@
             <div class="col-6 col-xs-6">
                 <div class="main-menu">
                     <nav role="navigation">
-                        <a href="javascript:;">Özellikler</a>
+                        <a class="active" href="account-actions.html">Hesap İşlemleri</a>
                         <a href="platforms.html">Platform</a>
-                        <a href="javascript:;">Analiz</a>
-                        <a href="javascript:;">Şirket</a>
-                        <a href="javascript:;">Duyurular</a>
-                        <a href="javascript:;">Destek</a>
+                        <a href="analysis.html">Analiz</a>
+                        <a href="about-us.html">Şirket</a>
+                        <a href="announcements.html">Duyurular</a>
+                        <a href="contact.html">Destek</a>
                     </nav>
                 </div>
             </div>
 
             <div class="col-4 text-right">
                 <div class="login-register-menu">
-                    <a class="btn btn-outline-light">Giriş Yap</a>
-                    <a class="btn btn-primary">Kayıt Ol</a>
+                    <a class="btn btn-outline-primary js-toggle-login-popup">Giriş Yap</a>
+                    <a class="btn btn-primary" href="open-demo-account.html">Hesap Aç</a>
+
+                    <div class="login-popup-container js-popup-container">
+
+                        <div class="popup-login-form">
+                            <div class="title">
+                                Giriş Yap
+                            </div>
+
+                            <div class="login-popup-form">
+                                <div class="form-group">
+                                    <input type="text" class="form-control contact-input" id="nameInput" placeholder="Hesap Numarası">
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control contact-input" id="nameInputx" placeholder="Şifre">
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6 text-right">
+                                        <a class="forgot-pw-link js-forgot-pw">Şifremi Unuttum</a>
+                                    </div>
+                                    <div class="form-group col-md-6 checkbox-line remember-me">
+                                        <div class="custom-control custom-checkbox">
+                                            <input type="checkbox" class="custom-control-input" id="customCheck1">
+                                            <label class="custom-control-label" for="customCheck1">Beni Hatırla</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <button type="submit" class="btn btn-primary btn-block">Giriş Yap</button>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
                 </div>
+
+
+
+
             </div>
 
         </div>
