--- a/src/contact.twig
+++ b/src/contact.twig
@@ -141,119 +141,13 @@
 
     </section>
 
-    <section class="page-platforms-account-block">
-        <div class="container">
-            <div class="row">
+    <!-- include free membership component -->
+    {% include "./layouts/components/free-membership.twig" %}
+    <!-- end include free membership component -->
 
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                    <div class="account-image">
-                        <img src="images/platform_account_image.png" class="img-fluid" />
-                    </div>
-                </div>
-
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-
-                    <div class="section-title">
-                        <h2>Ücretsiz Üye Olun</h2>
-                    </div>
-
-                    <div class="account-form">
-
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <input type="text" class="form-control input-custom" id="inputEmail4" placeholder="İsim"  />
-                            </div>
-                            <div class="form-group col-md-6">
-                                <input type="password" class="form-control input-custom" placeholder="Soyisim" />
-                            </div>
-                        </div>
-
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <input type="text" class="form-control input-custom" placeholder="Telefon"  />
-                            </div>
-                            <div class="form-group col-md-6">
-                                <input type="password" class="form-control input-custom" placeholder="Eposta" />
-                            </div>
-                        </div>
-
-                        <div class="form-row mt-3" >
-                            <div class="col-md-12 text-center">
-                                <button type="submit" class="btn btn-primary btn-submit">Kayıt Ol</button>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-    <section class="section-register-steps">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <div class="section-title text-center">
-                        <h2>Çarşı FX ile forex’e kolayca başlangıç yapın</h2>
-                        <p style="width: 80%; margin:20px auto;">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 steps-container">
-
-                    <div class="step-card step-1">
-                        <div class="step-outer step-bg-primary">
-                            <div class="step-inner">
-                                <span class="step-num">1</span>
-                            </div>
-                        </div>
-                        <div class="step-title">
-                            Kayıt Formunu Doldurun
-                        </div>
-                        <div class="description">
-                            Hemen üye olun ve Kale ÇarşıFX’i $000 sanal para ile deneyin.
-                        </div>
-                    </div>
-
-                    <div class="step-card step-2">
-                        <div class="step-outer step-bg-info">
-                            <div class="step-inner">
-                                <span class="step-num">2</span>
-                            </div>
-                        </div>
-                        <div class="step-title">
-                            Onay İşlemini Tamamlayın
-                        </div>
-                        <div class="description">
-                            Gerekli dökümanları sisteme yükleyin ve hesabınızı onaylayın.
-                        </div>
-                    </div>
-
-                    <div class="step-card step-3">
-                        <div class="step-outer step-bg-secondary">
-                            <div class="step-inner">
-                                <span class="step-num">3</span>
-                            </div>
-                        </div>
-                        <div class="step-title">
-                            Yatırıma Başla
-                        </div>
-                        <div class="description">
-                            Kale Fx’in zengin yatırım çeşitliliğinde yatırımlarınızı yönetin.
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
-    </section>
+    <!-- include register steps component --->
+    {% include "./layouts/components/register-steps.twig" %}
+    <!-- end include register steps component --->
 
     <!-- include footer -->
 
