FIX: Several UI Fixes for Homepage
- Nav links and names are changed
- News category tags are added

--- a/src/index.twig
+++ b/src/index.twig
@@ -15,7 +15,8 @@
                             Yüzlerce yatırım ürününde 5 gün 24 saat dilediğiniz yerde işlem yaparak yatırımlarınızı büyütebilir, Alım Satım işlemi yapabilirsiniz. Üstelik Deneme Hesabı açarak ile risksiz işlem yapabilirsiniz.
                         </p>
 
-                        <a href="javascript:;" class="btn btn-secondary btn-start-now">Hemen Başlayın</a>
+                        <a href="javascript:;" class="btn btn-secondary btn-start-now">Gerçek hesap aç</a>
+                        <a href="javascript:;" class="btn btn-outline-secondary btn-start-now">Demo hesap aç</a>
 
                     </div>
 
@@ -33,7 +34,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="section-title text-center">
-                        <h2>Çarşı FX Ayrıcalıklarıyla İş Yapın</h2>
+                        <h2>ÇarşıFX Ayrıcalıklarıyla İş Yapın</h2>
                         <p>
                             Forex, yatırım yapmanın şeklini de tarzını da değiştirdi; zaman ve mekan sınırı olmadan internetten güvenli, kolay ve avantajlı yatırım için lisanslı olarak hizmet veren bir yatırım kuruluşuyuz.
                         </p>
@@ -102,8 +103,7 @@
                 </div>
 
                 <div class="platform-buttons">
-                    <a href="javascript:;" class="btn btn-info">MetaTrader 4</a>
-                    <a href="javascript:;" class="btn btn-outline-info">MetaTrader 5</a>
+                    <a href="./platforms.html" class="btn btn-info">Detay</a>
                 </div>
 
             </div>
@@ -227,7 +227,7 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="section-title text-center">
-                    <h2>Forex Haber</h2>
+                    <h2>Haberler</h2>
                     <p>
                         Forex, yatırım yapmanın şeklini de tarzını da değiştirdi; zaman ve mekan sınırı olmadan internetten güvenli, kolay ve avantajlı yatırım için lisanslı olarak hizmet veren bir yatırım kuruluşuyuz.
                     </p>
@@ -238,6 +238,13 @@
         <div class="row news-container">
             <div class="col-lg-6 col-sm-6 col-xs-12 order-1">
                 <div class="news-card news-featured">
+
+                    <div class="details" style="margin-bottom:10px;">
+                        <span class="date-category">
+                            <a class="news-category" href="javascript:;">Forex Haber</a>
+                            14 November 2019 </span>
+                    </div>
+
                     <h3 class="news-title">Uzmanlar TCMB'nin Faiz Kararını Nasıl Karşıladı?</h3>
                     <p class="news-body">
                         Türkiye Cumhuriyet Merkez Bankası (TCMB) Ekim toplantısında bir hafta vadeli repo faizini sabit tutarak yüzde 10.25 seviyesinde bıraktı. TCMB, geç likidite penceresi (GLP) faizini yüzde 13.25’ten yüzde 14.75’e yükseldi. Merkez Bankası geçen ayki toplantısında politika faizini 200 bp artırmıştı.
@@ -264,7 +271,9 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                     </div>
                     <div class="details">
-                        <span class="publish-date">14 November 2019 </span>
+                        <span class="date-category">
+                            <a class="news-category" href="javascript:;">Forex Haber</a>
+                            14 November 2019 </span>
                         <a class="news-link">
                             Detay
                             <i data-feather="arrow-right"></i>
@@ -280,7 +289,9 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                     </div>
                     <div class="details">
-                        <span class="publish-date">14 November 2019 </span>
+                        <span class="date-category">
+                            <a class="news-category" href="javascript:;">Forex Haber</a>
+                            14 November 2019 </span>
                         <a class="news-link">
                             Detay
                             <i data-feather="arrow-right"></i>
@@ -298,7 +309,9 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                     </div>
                     <div class="details">
-                        <span class="publish-date">14 November 2019 </span>
+                        <span class="date-category">
+                            <a class="news-category" href="javascript:;">Forex Haber</a>
+                            14 November 2019 </span>
                         <a class="news-link">
                             Detay
                             <i data-feather="arrow-right"></i>
@@ -314,7 +327,9 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                     </div>
                     <div class="details">
-                        <span class="publish-date">14 November 2019 </span>
+                        <span class="date-category">
+                            <a class="news-category" href="javascript:;">Forex Haber</a>
+                            14 November 2019 </span>
                         <a class="news-link">
                             Detay
                             <i data-feather="arrow-right"></i>
@@ -409,7 +424,7 @@
                     <a class="platform-name">
                         Android
                     </a>
-                    <p class="platform-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                    <p class="platform-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
                     <a class="btn btn-primary btn-download">Android İçin İndir</a>
                 </div>
 
@@ -420,7 +435,7 @@
                     <a class="platform-name">
                         İOS
                     </a>
-                    <p class="platform-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                    <p class="platform-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
                     <a class="btn btn-primary btn-download">İOS İçin İndir</a>
                 </div>
 
