--- a/src/styles/pages/investment-tools.scss
+++ b/src/styles/pages/investment-tools.scss
@@ -1,6 +1,7 @@
 .page-live-currency {
 
-  margin-top:420px;
+  margin-top:220px;
+  margin-bottom: 200px;
 
   .section-title {
     width: 70%;
@@ -8,7 +9,7 @@
   }
 
   .currency-flow-table {
-    height:400px;
+    height:260px;
     font-family: $base-font-family;
 
     table {
@@ -36,34 +37,6 @@
 
     }
 
-  }
-
-}
-
-@media only screen and (max-width: $x-small) {
-  .page-live-currency {
-    margin-top: 50px;
-  }
-
-}
-
-@media only screen and (max-width: $x-small) {
-  .page-live-currency {
-    margin-top: 50px;
-  }
-
-}
-
-@media only screen and (max-width: $x-small) {
-  .page-live-currency {
-    margin-top: 50px;
-  }
-
-}
-
-@media only screen and (max-width: $x-small) {
-  .page-live-currency {
-    margin-top: 50px;
   }
 
 }
